test/src/e2e_vm_tests/test_programs/should_fail/traits_with_call_paths/src/my_a.sw
library my_a;

pub trait A {
    fn f(self) -> u64;
} {
    
}
